--- a/src/pages/JobCalendar.page
+++ b/src/pages/JobCalendar.page
@@ -108,12 +108,12 @@
                             var shifts = [];
                             var jobIds = [];
                             for (var i = 0; i < result.length; i++) {
-                                var dtStart = new Date(result[i].GW_Volunteers__Start_Date_Time__c);
+                                var dtStart = new Date(result[i].Start_Date_Time__c);
                                 var dtEnd = new Date(dtStart);
-                                dtEnd.setMinutes(dtEnd.getMinutes() + (result[i].GW_Volunteers__Duration__c * 60));
+                                dtEnd.setMinutes(dtEnd.getMinutes() + (result[i].Duration__c * 60));
                                 
                                 // map JobId's to unique colors.
-                                var jobId = result[i].GW_Volunteers__Volunteer_Job__c;
+                                var jobId = result[i].Volunteer_Job__c;
                                 
                                 // used to map job to colors on a first come basis,
                                 // but now try to match a color to a job regardless of
@@ -123,21 +123,21 @@
                                 var icolor = numFromId(jobId); 
                                 var colorShift = colors[icolor % colors.length];
                                                                     
-                                var intTotalVolunteers = result[i].GW_Volunteers__Total_Volunteers__c;
+                                var intTotalVolunteers = result[i].Total_Volunteers__c;
                                 if (intTotalVolunteers == null) intTotalVolunteers = 0;
-                                var intStillNeeded = result[i].GW_Volunteers__Number_of_Volunteers_Still_Needed__c;
+                                var intStillNeeded = result[i].Number_of_Volunteers_Still_Needed__c;
                                 if (intStillNeeded == null) intStillNeeded = 0;
                                 var strShiftNumbers = '{!$Label.labelShiftNumbers}';
                                 strShiftNumbers = strShiftNumbers.replace('{0}', intTotalVolunteers);
                                 strShiftNumbers = strShiftNumbers.replace('{1}', intStillNeeded);
                                 
-                                var strCampaignId = new String(result[i].GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Campaign__c);
+                                var strCampaignId = new String(result[i].Volunteer_Job__r.Campaign__c);
                                 var strJobId = new String(jobId);
                                 var strShiftId = new String(result[i].Id);                              
                                 var strUrl;
                                 
                                 if ({!fWeb}) {
-									strUrl = '{!$Site.CurrentSiteUrl + IF(fPersonalSite, 'GW_Volunteers__PersonalSiteJobListing', 'GW_Volunteers__VolunteersJobListingFS')}' +                                     
+									strUrl = '{!$Site.CurrentSiteUrl + IF(fPersonalSite, 'PersonalSiteJobListing', 'VolunteersJobListingFS')}' +                                     
                                         '?Calendar=1&volunteerShiftId=' + strShiftId + '&jobId=' + strJobId +
                                         '&dtMonthFilter=' + strApexDateLocale(dtStart, true) +
                                         '{!IF(strParams != null, '&' + strParams, '')}';
@@ -147,11 +147,11 @@
                                                 
 								// note that we lop off the timezone, to avoid FullCalendar from translating it to the current browser locale.                                                
                                 shifts.push({
-                                    title: result[i].GW_Volunteers__Volunteer_Job__r.Name + (intStillNeeded == 0 ? ' ' + 
+                                    title: result[i].Volunteer_Job__r.Name + (intStillNeeded == 0 ? ' ' + 
                                         '{!$Label.labelCalendarShiftFull}' : ''),
-                                    description: result[i].GW_Volunteers__Description__c,                           
+                                    description: result[i].Description__c,                           
                                     strNumbers: strShiftNumbers,
-                                    urlRoster:  '/apex/GW_Volunteers__OpenReport?ReportDevName=Volunteer_Roster' + 
+                                    urlRoster:  '/apex/OpenReport?ReportDevName=Volunteer_Roster' + 
                                                 '&pv0=' + strCampaignId.substr(0, 15) +
                                                 '&pv1=' + strJobId.substr(0, 15) +     
                                                 '&pv2=' + strShiftId.substr(0,15),    
@@ -263,7 +263,7 @@
 </script>
 
     <apex:outputPanel id="panelPrint" layout="block" style="float:right" rendered="{!AND(NOT(fPrint),NOT(fWeb))}">
-        <a href="javascript:printWin('/apex/GW_Volunteers__JobCalendar?Print=1' + 
+        <a href="javascript:printWin('/apex/JobCalendar?Print=1' + 
             '&campaignId={!campaignId}' + 
             '&volunteerJobId={!volunteerJobId}' +
             '&initialDate=' + strApexDateLocale(j$('#calendar').fullCalendar('getDate'), true) +
