--- a/src/pages/PersonalSiteTemplate.page
+++ b/src/pages/PersonalSiteTemplate.page
@@ -51,10 +51,10 @@
             </div>
             <div class="navbar-inner" style="padding:0 20px;">              
                 <ul class="nav">
-                    <li class="{!IF($CurrentPage.Name == 'GW_Volunteers__PersonalSiteJobListing', 'active', '')}"><a href="{!$Page.PersonalSiteJobListing + '?Language=' + Language + '&nMonthsToShow=1'}" >{!$Label.labelPersonalSiteJobListingTitle}</a></li>
-                    <li class="{!IF($CurrentPage.Name == 'GW_Volunteers__PersonalSiteJobCalendar', 'active', '')}"><a href="{!$Page.PersonalSiteJobCalendar + '?Language=' + Language + '&nMonthsToShow=1'}" >{!$Label.labelPersonalSiteJobCalendarTitle}</a></li>
-                    <li class="{!IF($CurrentPage.Name == 'GW_Volunteers__PersonalSiteContactInfo', 'active', '')}"><a href="{!$Page.PersonalSiteContactInfo + '?Language=' + Language}" >{!$Label.labelPersonalSiteContactInfoTitle}</a></li>
-                    <li class="{!IF($CurrentPage.Name == 'GW_Volunteers__PersonalSiteReportHours', 'active', '')}"><a href="{!$Page.PersonalSiteReportHours + '?Language=' + Language}" >{!$Label.labelPersonalSiteReportHoursTitle}</a></li>                
+                    <li class="{!IF($CurrentPage.Name == 'PersonalSiteJobListing', 'active', '')}"><a href="{!$Page.PersonalSiteJobListing + '?Language=' + Language + '&nMonthsToShow=1'}" >{!$Label.labelPersonalSiteJobListingTitle}</a></li>
+                    <li class="{!IF($CurrentPage.Name == 'PersonalSiteJobCalendar', 'active', '')}"><a href="{!$Page.PersonalSiteJobCalendar + '?Language=' + Language + '&nMonthsToShow=1'}" >{!$Label.labelPersonalSiteJobCalendarTitle}</a></li>
+                    <li class="{!IF($CurrentPage.Name == 'PersonalSiteContactInfo', 'active', '')}"><a href="{!$Page.PersonalSiteContactInfo + '?Language=' + Language}" >{!$Label.labelPersonalSiteContactInfoTitle}</a></li>
+                    <li class="{!IF($CurrentPage.Name == 'PersonalSiteReportHours', 'active', '')}"><a href="{!$Page.PersonalSiteReportHours + '?Language=' + Language}" >{!$Label.labelPersonalSiteReportHoursTitle}</a></li>                
                 </ul>
             </div>          
         </div>
