--- a/src/pages/VolunteersBatchJobsProgress.page
+++ b/src/pages/VolunteersBatchJobsProgress.page
@@ -63,7 +63,7 @@
 		       				<a  href='/ui/setup/apex/batch/ScheduleBatchApexPage'>Schedule Apex Jobs page.</a></p>
 		</apex:pageBlock>
 		<apex:outputPanel >
-			<c:batchJobs strBatchComponentLabel="Process Recurrence Schedules Progress" cNumberOfJobs="1" />
+		<!---	<c:batchJobs strBatchComponentLabel="Process Recurrence Schedules Progress" cNumberOfJobs="1" /> --->
 		</apex:outputPanel>
 	</apex:form>
 </apex:page>
